--- a/app/assets/stylesheets/_mixins.sass
+++ b/app/assets/stylesheets/_mixins.sass
@@ -1,5 +1,14 @@
 $red: #C72030
 
+=logo-font
+  font-family: "Permanent Marker", serif
+
+=title-font
+  font-family: "Bitter", serif
+
+=body-font
+  font-family: "Lato", helvetica, sans-serif
+
 =transition($values)
   -o-transition: $values
   -moz-transition: $values
@@ -36,6 +45,10 @@ $red: #C72030
   @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
     @content
 
+=min-width($value)
+  @media all and (min-width: $value)
+    @content
+
 =button
   +logo-font
   color: $red
@@ -48,7 +61,7 @@ $red: #C72030
   background-color: rgba(255,255,255,.75)
   +transition (all 100ms $ease-in-quad)
   line-height: normal
-  &:hover, &:active
+  &:hover, &:active, &.active
     background-color: $red
     border-color: $red
     border-style: solid
