--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -1,13 +1,9 @@
-$red: #C72030
-
-=logo-font
-  font-family: "Permanent Marker", serif
-
-=title-font
-  font-family: "Bitter", serif
+@import "../../../vendor/assets/bourbon/bourbon"
+@import "../../../vendor/assets/neat/neat"
+@import "mixins"
 
 body *
-  font-family: "Lato", helvetica, sans-serif
+  +body-font
   outline: none
 
 body
@@ -29,7 +25,7 @@ h1
   line-height: 1
 
 .content-wrapper
-  +grid-container
+  // +grid-container
   max-width: 1200px
   padding: 0 40px
   margin: 0 auto
@@ -39,7 +35,7 @@ h1
     padding: 20px
 
 .column-wrapper
-  +grid-container
+  // +grid-container
 
 .homepage-section
   height: 100vh
@@ -355,7 +351,7 @@ h1
     width: 100%
     padding: 20px 30px
     box-sizing: border-box
-    +mobile-mq
+    +mobile-mq(768px)
       top: 0
       bottom: auto
       flex-direction: row-reverse
@@ -428,7 +424,7 @@ h1
     bottom: 10px
     left: 50%
     margin-left: -25px
-    +mobile-mq
+    +mobile-mq(768px)
       display: block
 
 #section-five
