--- a/app/views/resume/show.html.erb
+++ b/app/views/resume/show.html.erb
@@ -62,7 +62,7 @@
     </ul>
     <h2 class='formal-ed'>Formal Education</h2>
     <p class='subject-title'><span>2007-2009</span> University of South Australia
-    <p>Bachelor of Visual Communication (Graphic Design). A 3 year course on the elements of powerful visual design & communication.</p>
+    <p>Bachelor of Visual Communication (Graphic Design). A 3 year course on the elements of visual design & communication.</p>
   </div>
   
   <div class='column-two'>
@@ -73,12 +73,12 @@
   
     <h2 class='employment'>Employment History</h2>
     <p class='subject-title'><span>2009-2017</span> reInteractive</p>
-    <p>Front-end developer & designer. Worked as part of a remote, agile team on everything from UX prototyping to  nal valuable product.</p>
+    <p>Front-end developer & designer. Worked as part of a remote, agile team on everything from UX prototyping to  final valuable product.</p>
     <p class='subject-title'><span>2003-2009</span> Next Byte Adelaide</p>
     <p>21C Store Manager. Managed weekends, rosters, inventory & staff.</p>
 
     <h2 class='personal-interests'>Personal Interests</h2>
-    <p>I’m an adventurer at heart, as I love to experience the new. I love to travel, ride motorcycles, and go camping. I like to play sports and do yoga for  tness and endorphins. I also enjoy a good book, and play the occasional video game.</p>
+    <p>I’m an adventurer at heart, as I love to experience the new. I love to travel, ride motorcycles, and go camping. I like to play sports and do yoga for fitness and endorphins. I also enjoy a good book, and play the occasional video game.</p>
   </div>
 </div>
 
