--- a/app/assets/stylesheets/resume.sass
+++ b/app/assets/stylesheets/resume.sass
@@ -123,6 +123,7 @@ ul, ol
     line-height: 50px
     font-size: 1.2em
     margin: 0
+    white-space: nowrap
     &:after
       content: ""
       display: inline-block
