--- a/app/assets/stylesheets/resume.sass
+++ b/app/assets/stylesheets/resume.sass
@@ -55,19 +55,43 @@ ul, ol
   background-size: cover
   color: white
   padding: 100px 2em
+  *
   h1
     +title-font
     font-weight: 900
-    font-size: 7em
+    font-size: 5em
     margin: 0 0 20px
     line-height: 1em
+    position: relative
+    &:after
+      content: ""
+      display: block
+      width: 15px
+      height: 15px
+      background: image-url('heart-white.svg') no-repeat 50%
+      background-size: 15px auto
+      position: absolute
+      bottom: 8px
+      left: 205px
+      +min-width($bp1)
+        left: 247px
+      +min-width($bp2)
+        width: 20px
+        height: 20px
+        background-size: 20px auto
+        left: 285px
     span
       display: block
       font-family: inherit
+    +min-width($bp1)
+      font-size: 6em
+    +min-width($bp2)
+      font-size: 7em
   p
     max-width: 350px
     color: white
     margin-bottom: 20px
+    +title-font
   +min-width($bp1)
     grid-column: 1/3
     padding: 50px 2em
@@ -99,14 +123,14 @@ ul, ol
 
 
 .wrapper .column-one
-  padding: 50px 2em 0
+  padding: 50px 1em 0
   +min-width($bp1)
     grid-column: 1/2
   +min-width($bp2)
     grid-column: 2/3
 
 .wrapper .column-two
-  padding: 0 2em 50px
+  padding: 0 1em 50px
   +min-width($bp1)
     grid-column: 2/3
   +min-width($bp2)
@@ -114,6 +138,7 @@ ul, ol
 
 .wrapper .column-one, .wrapper .column-two
   align-self: start
+  max-width: 100vw
   +min-width($bp1)
     padding: 1em
     grid-row: 2/3
