--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title><%= yield :title || "HelloDave.com" %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="google-site-verification" content="jTG1owFyjKCalwwK5xwVQkIS9Yonv4p_bmRbfkfj6pU" />
     <%= favicon_link_tag 'favicon.ico' %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Bitter:400,700|Lato:400,700|Permanent+Marker" rel="stylesheet">
