Added smart nav, resume link, tweaks

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,51 +69,7 @@
     <div class='dashed-line one'></div>
     <div class='portfolio-section'>
       <div class='portfolio-slider'>
-        <div class='portfolio-slide businest' data-name='Businest' data-href='https://businest.com'>
-          <%= image_tag('businest-a.jpg') %>
-        </div>
-        <div class='portfolio-slide businest' data-name='Businest' data-href='https://businest.com'>
-          <%= image_tag('businest-b.jpg') %>
-        </div>
-        <div class='portfolio-slide businest'>
-          <%= image_tag('businest-c.png') %>
-        </div>
-        <div class='portfolio-slide businest'>
-          <%= image_tag('businest-d.jpg') %>
-        </div>
-        <div class='portfolio-slide businest'>
-          <%= image_tag('businest-e.jpg') %>
-        </div>
-        <div class='portfolio-slide sterling'>
-          <%= image_tag('sterling-a.jpg') %>
-        </div>
-        <div class='portfolio-slide sterling'>
-          <%= image_tag('sterling-b.jpg') %>
-        </div>
-        <div class='portfolio-slide sterling'>
-          <%= image_tag('sterling-c.jpg') %>
-        </div>
-        <div class='portfolio-slide sterling'>
-          <%= image_tag('sterling-d.jpg') %>
-        </div>
-        <div class='portfolio-slide sterling'>
-          <%= image_tag('sterling-e.jpg') %>
-        </div>
-        <div class='portfolio-slide sterling'>
-          <%= image_tag('sterling-f.jpg') %>
-        </div>
-        <div class='portfolio-slide petrescue'>
-          <%= image_tag('petrescue-a.jpg') %>
-        </div>
-        <div class='portfolio-slide petrescue'>
-          <%= image_tag('petrescue-b.jpg') %>
-        </div>
-        <div class='portfolio-slide petrescue'>
-          <%= image_tag('petrescue-c.jpg') %>
-        </div>
-        <div class='portfolio-slide petrescue'>
-          <%= image_tag('petrescue-d.jpg') %>
-        </div>
+        <%= render partial: "portfolio_slides" %>
       </div>
       <div class="swipe-icon"></div>
       <div class='slide-title'>
