--- a/app/assets/stylesheets/resume.sass
+++ b/app/assets/stylesheets/resume.sass
@@ -54,7 +54,7 @@ ul, ol
   background: $red image-url('spider-web-alpha.svg') no-repeat calc(100% + 50px) 0
   background-size: cover
   color: white
-  padding: 100px 2em
+  padding: 100px 1em
   *
   h1
     +title-font
@@ -75,18 +75,14 @@ ul, ol
       left: 205px
       +min-width($bp1)
         left: 247px
-      +min-width($bp2)
         width: 20px
         height: 20px
         background-size: 20px auto
-        left: 285px
     span
       display: block
       font-family: inherit
     +min-width($bp1)
       font-size: 6em
-    +min-width($bp2)
-      font-size: 7em
   p
     max-width: 350px
     color: white
@@ -126,21 +122,24 @@ ul, ol
   padding: 50px 1em 0
   +min-width($bp1)
     grid-column: 1/2
+    padding: 1em 1em 1em 2em
   +min-width($bp2)
     grid-column: 2/3
+    padding: 1em
 
 .wrapper .column-two
   padding: 0 1em 50px
   +min-width($bp1)
     grid-column: 2/3
+    padding: 1em 2em 1em 1em
   +min-width($bp2)
     grid-column: 3/4
+    padding: 1em
 
 .wrapper .column-one, .wrapper .column-two
   align-self: start
   max-width: 100vw
   +min-width($bp1)
-    padding: 1em
     grid-row: 2/3
   +min-width($bp2)
     grid-row: 1
