--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="main"> 
   <%= link_to "", "#", class: 'menu-link', 'data-menulink': 'nav' %>
   <div class='mobile-nav-wrapper' data-menu='nav'>
-    <%= link_to "Home", "#section-one", class: 'nav-link scrollable-link' %>
+    <%= link_to "Home", "#section-one", class: 'nav-link scrollable-link active' %>
     <%= link_to "About me", "#section-two", class: 'nav-link scrollable-link' %>
     <%= link_to "Skills", "#section-three", class: 'nav-link scrollable-link' %>
     <%= link_to "Portfolio", "#section-four", class: 'nav-link scrollable-link' %>
