updating page 2 styles

--- a/app/views/resume/show.html.erb
+++ b/app/views/resume/show.html.erb
@@ -84,16 +84,13 @@
 
 <div class='wrapper pg2'>
   <div class='column-one'>
-    <h2 class='employment'>Past work in finer detail</h2>
+    <h2 class='work-detail'>Past Work in finer detail</h2>
     <p class="subject-title">reInteractive</p>
     <p>During my 7 years at reInteractive, I did a little bit of everything: branding, UX design, graphic design, social media, and of course front-end development. We worked mainly with Ruby on Rails, although I am familiar with some javascript frameworks as well. As a trained graphic designer I was often involved from design inception to final valuable product. I enjoy the very different challenges of crafting beautiful designs and efficient codebases.</p>
     <p>As an HTML and CSS specialist, I was adept at communicating with everyone from designers to decision makers around the technical and visual challenges encountered in almost every project. Working on projects from companies as large as Westfield or Price Waterhouse Coopers, as well as for startups and SMEs, has given me a broad depth of experience.</p>
     <p>I worked mainly as a remote worker during my time here, and am quite adept at self-motivation and meeting deadlines. I am proficient in agile task tracking tools such as Pivotal Tracker and JIRA, and am well versed in Agile methodology.</p>
     <p class="subject-title">Freelance Web Design</p>
     <p>Since leaving reInteractive in 2017, I have been working as a part time freelance web designer & business operator. I have worked on some small graphic design projects in this time, as well as redesigning WordPress websites.</p>
-  </div>
-  <div class='column-two'>
-    <%= image_tag "dave-desk.jpg", class: "dave-desk-img" %>
   </div>
 </div>
 
