--- a/app/assets/stylesheets/resume.sass
+++ b/app/assets/stylesheets/resume.sass
@@ -42,6 +42,9 @@ ul, ol
     grid-template-columns: 1fr 1fr 1fr
   &.pg2
     border: none
+    grid-template-columns: 1fr
+    +min-width($bp2)
+      grid-template-columns: 2fr 1fr
     
 
 .wrapper > div
@@ -141,21 +144,10 @@ ul, ol
     padding: 1em
 
 .wrapper.pg2 .column-one
-  +min-width($bp2)
-    grid-column: 1/3
-    padding: 2em
-
-.wrapper.pg2 .column-two
-  background-color: #a3a3a3
-  .dave-desk-img
-    width: 100%
-    max-width: 300px
+  grid-column: 1
+  padding-bottom: 80px
   +min-width($bp1)
-    grid-column: 2/3
-  +min-width($bp2)
     padding: 2em
-    grid-column: 3/4
-    height: 100%
 
 .wrapper .column-one, .wrapper .column-two, .wrapper .column-zero
   align-self: start
@@ -194,6 +186,9 @@ ul, ol
     background-position-y: -253px
   .personal-interests:after
     background-position-y: -316px
+  .work-detail:after
+    background-position-y: -381px
+
 
 .skills-list
   li
