Updating copy of resume

--- a/app/views/resume/show.html.erb
+++ b/app/views/resume/show.html.erb
@@ -3,15 +3,15 @@
 <div class='wrapper pg1'>
   <div class='title-section'>
     <h1>Hi <span>I’m</span> Dave</h1>
-    <p>Web designer & developer, illustrator and photographer, and not too hard on the eyes either.</p>
+    <p>Web designer & developer, illustrator & photographer, and not too hard on the eyes either.</p>
     <%= link_to "+61 402 428 184", "tel:+61402428184", class: 'telephone contact-link' %>
     <%= link_to "why@hellodave.com.au", "mailto:why@hellodave.com.au", class: 'email contact-link' %>
-    <%= link_to "http://www.hellodave.com.au", "http://www.hellodave.com.au", class: 'website contact-link' %>
+    <%= link_to "www.hellodave.com.au", "http://www.hellodave.com.au", class: 'website contact-link' %>
     <%= link_to "Letter of Recommendation", asset_path("letterofrecommendation.pdf"), class: 'pdf contact-link' %>
   </div>
   <div class='column-one'>
     <h2 class='profile'>Profile</h2>
-    <p>I am an 8 year veteran in web design & development. I enjoy writing beautiful code as much as I love crafting elegant designs. I have worked with all manner of businesses, from large corporations, to SME’s and startups. I have worked with some of Australia’s largest corporations, including the ABC and Qantas. I am a very social creature and enjoy communicating and engaging with people.</p>
+    <p>I am an 8 year veteran in web design and development. I enjoy writing beautiful code as much as I love crafting elegant designs. I have worked with all manner of businesses, from large corporations, to SME’s and startups. I have worked with some of Australia’s largest corporations, including the ABC and Qantas. I am a very social creature and enjoy communicating and engaging with people.</p>
     <h2 class='skills'>Skill Set</h2>
     <ul class='skills-list'>
       <li>
@@ -62,35 +62,35 @@
     </ul>
     <h2 class='formal-ed'>Formal Education</h2>
     <p class='subject-title'><span>2007-2009</span> University of South Australia
-    <p>Bachelor of Visual Communication (Graphic Design). A 3 year course on the elements of visual design & communication.</p>
+    <p>Bachelor of Visual Communication (Graphic Design), a three-year course on the elements of visual design and communication.</p>
   </div>
   
   <div class='column-two'>
     <h2 class='informal-ed'>Informal Education</h2>
     <p class='subject-title'><span>2007-now</span> Planet Earth</p>
-    <p>I have attended many conferences on art, design & coding including SXSW, AGIdeas (also as a student ambassador while studying), CSSConf, and RubyConf to name a few. I have studied new web technologies and design trends my whole career.</p>
+    <p>I have attended many conferences on art, design, and coding including SXSW, AGIdeas (also as a student ambassador while studying), CSSConf, and RubyConf to name a few. I have studied new web technologies and design trends my whole career.</p>
   
     <h2 class='employment'>Work Summary</h2>
     <p class='subject-title'><span>2017-Now</span>DC Design</p>
     <p>Freelance web design, graphic design, web development.</p>
     <p class='subject-title'><span>2009-2017</span> reInteractive</p>
-    <p>Front-end developer & designer. Worked as part of a remote, agile team on everything from UX prototyping to  final valuable product.</p>
+    <p>Front-end developer and designer. Worked as part of a remote, agile team on everything from UX prototyping to  final valuable product.</p>
     <p class='subject-title'><span>2003-2009</span> Next Byte Adelaide</p>
-    <p>21C Store Manager. Managed weekends, rosters, inventory & staff.</p>
+    <p>2iC Store Manager. Managed weekends, rosters, inventory & staff.</p>
     <h2 class='personal-interests'>Personal Interests</h2>
-    <p>I’m an adventurer at heart, as I love to experience the new. I love to travel, ride motorcycles, and go camping. I like to play sports and do yoga for fitness and endorphins. I also enjoy a good book, and play the occasional video game.</p>
+    <p>I’m an adventurer at heart: I love to experience the new. I love to travel, ride motorcycles, and go camping. I like to play sports and do yoga for fitness and endorphins. I also enjoy a good book, and play the occasional video game.</p>
   </div>
 </div>
 
 <div class='wrapper pg2'>
   <div class='column-one'>
-    <h2 class='work-detail'>Past Work in finer detail</h2>
+    <h2 class='work-detail'>Past Work In Finer Detail</h2>
     <p class="subject-title">reInteractive</p>
     <p>During my 7 years at reInteractive, I did a little bit of everything: branding, UX design, graphic design, social media, and of course front-end development. We worked mainly with Ruby on Rails, although I am familiar with some javascript frameworks as well. As a trained graphic designer I was often involved from design inception to final valuable product. I enjoy the very different challenges of crafting beautiful designs and efficient codebases.</p>
-    <p>As an HTML and CSS specialist, I was adept at communicating with everyone from designers to decision makers around the technical and visual challenges encountered in almost every project. Working on projects from companies as large as Westfield or Price Waterhouse Coopers, as well as for startups and SMEs, has given me a broad depth of experience.</p>
+    <p>As an HTML and CSS specialist, I was skilled at communicating with everyone from designers to decision makers around the technical and visual challenges encountered in almost every project. Working on projects from companies as large as Westfield or Price Waterhouse Coopers, as well as for startups and SMEs, has given me a broad depth of experience.</p>
     <p>I worked mainly as a remote worker during my time here, and am quite adept at self-motivation and meeting deadlines. I am proficient in agile task tracking tools such as Pivotal Tracker and JIRA, and am well versed in Agile methodology.</p>
     <p class="subject-title">Freelance Web Design</p>
-    <p>Since leaving reInteractive in 2017, I have been working as a part time freelance web designer & business operator. I have worked on some small graphic design projects in this time, as well as redesigning WordPress websites.</p>
+    <p>Since leaving reInteractive in 2017, I have been working as a part time freelance web designer and business operator. I have worked on some small graphic design projects in this time, as well as redesigning WordPress websites.</p>
   </div>
 </div>
 
