Updating routes, links

--- a/app/assets/stylesheets/resume.sass
+++ b/app/assets/stylesheets/resume.sass
@@ -120,8 +120,10 @@ ul, ol
     background-position: 0 -59px
   &.website
     background-position: 0px -120px
+  &.linkedin
+    background-position: 0 -241px
   &.pdf
-    background-position: 0 100%
+    background-position: 0 -179px
   &:hover
     transform: scale(1.1)
 
