--- a/app/views/resume/show.html.erb
+++ b/app/views/resume/show.html.erb
@@ -7,6 +7,7 @@
     <%= link_to "+61 402 428 184", "tel:+61402428184", class: 'telephone contact-link' %>
     <%= link_to "why@hellodave.com.au", "mailto:why@hellodave.com.au", class: 'email contact-link' %>
     <%= link_to "www.hellodave.com.au", "http://www.hellodave.com.au", class: 'website contact-link' %>
+    <%= link_to "LinkedIn", "#", class: 'contact-link linkedin' %>
     <%= link_to "Letter of Recommendation", asset_path("letterofrecommendation.pdf"), class: 'pdf contact-link' %>
   </div>
   <div class='column-one'>
