Updated resume copy

--- a/app/views/resume/show.html.erb
+++ b/app/views/resume/show.html.erb
@@ -7,7 +7,7 @@
     <%= link_to "+61 402 428 184", "tel:+61402428184", class: 'telephone contact-link' %>
     <%= link_to "why@hellodave.com.au", "mailto:why@hellodave.com.au", class: 'email contact-link' %>
     <%= link_to "www.hellodave.com.au", "http://www.hellodave.com.au", class: 'website contact-link' %>
-    <%= link_to "LinkedIn", "#", class: 'contact-link linkedin' %>
+    <%= link_to "LinkedIn", "https://www.linkedin.com/in/dave-cruikshank/", class: 'contact-link linkedin' %>
     <%= link_to "Letter of Recommendation", asset_path("letterofrecommendation.pdf"), class: 'pdf contact-link' %>
   </div>
   <div class='column-one'>
@@ -87,9 +87,23 @@
   <div class='column-one'>
     <h2 class='work-detail'>Past Work In Finer Detail</h2>
     <p class="subject-title">reInteractive</p>
-    <p>During my 7 years at reInteractive, I did a little bit of everything: branding, UX design, graphic design, social media, and of course front-end development. We worked mainly with Ruby on Rails, although I am familiar with some javascript frameworks as well. As a trained graphic designer I was often involved from design inception to final valuable product. I enjoy the very different challenges of crafting beautiful designs and efficient codebases.</p>
-    <p>As an HTML and CSS specialist, I was skilled at communicating with everyone from designers to decision makers around the technical and visual challenges encountered in almost every project. Working on projects from companies as large as Westfield or Price Waterhouse Coopers, as well as for startups and SMEs, has given me a broad depth of experience.</p>
-    <p>I worked mainly as a remote worker during my time here, and am quite adept at self-motivation and meeting deadlines. I am proficient in agile task tracking tools such as Pivotal Tracker and JIRA, and am well versed in Agile methodology.</p>
+    <p>During my 7 years at reInteractive, I was involved in many aspects of the design and development process. We worked mainly with Ruby on Rails, although I am familiar with some javascript frameworks as well. As a trained graphic designer I was often involved from design inception to final valuable product. I enjoy the very different challenges of crafting beautiful designs and efficient codebases.</p>
+    <p>
+      What I contributed to any given project varied depending on any particular clients needs. During my time at reinteractive I was involved with:
+      <ul class='text-list'>
+        <li>Branding - I created brands for reInteractive and it’s subsidiary operations</li>
+        <li>Animation - I created instructional videos for stillalive.com and other promotional videos</li>
+        <li>Print design - Brochures, business cards, stationery & more for reinteractive and subsidiaries</li>        
+        <li>Training - I helped teach students how to get started with Rails through the Ruby on Rails Installfest program, as well as training some junior developers in some front-end best practices</li>
+        <li>Management - running daily stand-ups, client interaction and coordinating small teams</li>
+        <li>UX Design - performing user research and employing best practices in creating wireframes</li>
+        <li>Web Design - turning well-researched UX into beautiful, interactive website mockups</li>
+        <li>Front-end Development - connecting Ruby on Rails backends with modular cutting edge HTML, CSS, and Javascript, and managing responsiveness and browser compatibility.</li>
+        <li>Testing - Maintaining test suites and updating where appropriate</li>
+      </ul>
+    </p>
+    <p>As an HTML/CSS specialist and designer, I was skilled at communicating with everyone from designers to CTOs and decision makers regarding the technical and visual challenges encountered in almost every project. Through effective communication I developed strong working relationships with my clients, which helped in managing projects greatly.</p>
+    <p>Working on projects from companies as large as Westfield, the ABC, or Price Waterhouse Coopers, as well as for startups and SMEs, has given me a broad depth of experience. For example: I have helped to build the front end of the <%= link_to "ABC’s online store", "https://shop.abc.net.au/" %>, as well as building out the insurance comparison tool and marketing pages for startup <%= link_to "OneBigSwitch", "https://www.onebigswitch.com.au" %>.</p>
     <p class="subject-title">Freelance Web Design</p>
     <p>Since leaving reInteractive in 2017, I have been working as a part time freelance web designer and business operator. I have worked on some small graphic design projects in this time, as well as redesigning WordPress websites.</p>
   </div>
