--- a/app/assets/stylesheets/resume.sass
+++ b/app/assets/stylesheets/resume.sass
@@ -19,10 +19,21 @@ p
   margin: 0 0 10px
   color: #333
 
-ul, ol
+ol, ul
   margin: 0
   padding: 0
   list-style: none
+
+ul.text-list
+  margin: 0
+  max-width: 750px
+  list-style: disc
+  padding: 0 0 0 30px
+  li
+    color: #333
+
+a
+  color: $red
 
 .wrapper
   max-width: 1200px
@@ -146,7 +157,7 @@ ul, ol
     padding: 1em
 
 .wrapper.pg2 .column-one
-  grid-column: 1
+  grid-column: 1/3
   padding-bottom: 80px
   +min-width($bp1)
     padding: 2em
