Added new links, updated formatting

--- a/app/views/resume/show.html.erb
+++ b/app/views/resume/show.html.erb
@@ -74,7 +74,7 @@
     <h2 class='employment'>Work Summary</h2>
     <p class='subject-title'><span>2017-Now</span>DC Design</p>
     <p>Freelance web design, graphic design, web development.</p>
-    <p class='subject-title'><span>2009-2017</span> reInteractive</p>
+    <p class='subject-title'><span>2009-2017</span> reinteractive</p>
     <p>Front-end developer and designer. Worked as part of a remote, agile team on everything from UX prototyping to  final valuable product.</p>
     <p class='subject-title'><span>2003-2009</span> Next Byte Adelaide</p>
     <p>2iC Store Manager. Managed weekends, rosters, inventory & staff.</p>
@@ -86,12 +86,12 @@
 <div class='wrapper pg2'>
   <div class='column-one'>
     <h2 class='work-detail'>Past Work In Finer Detail</h2>
-    <p class="subject-title">reInteractive</p>
-    <p>During my 7 years at reInteractive, I was involved in many aspects of the design and development process. We worked mainly with Ruby on Rails, although I am familiar with some javascript frameworks as well. As a trained graphic designer I was often involved from design inception to final valuable product. I enjoy the very different challenges of crafting beautiful designs and efficient codebases.</p>
+    <p class="subject-title subheading">reinteractive</p>
+    <p>During my 7 years at reinteractive, I was involved in many aspects of the design and development process. We worked mainly with Ruby on Rails, although I am familiar with some javascript frameworks as well. As a trained graphic designer I was often involved from design inception to final valuable product. I enjoy the very different challenges of crafting beautiful designs and efficient codebases.</p>
     <p>
       What I contributed to any given project varied depending on any particular clients needs. During my time at reinteractive I was involved with:
       <ul class='text-list'>
-        <li>Branding - I created brands for reInteractive and it’s subsidiary operations</li>
+        <li>Branding - I created brands for reinteractive and it’s subsidiary operations</li>
         <li>Animation - I created instructional videos for stillalive.com and other promotional videos</li>
         <li>Print design - Brochures, business cards, stationery & more for reinteractive and subsidiaries</li>        
         <li>Training - I helped teach students how to get started with Rails through the Ruby on Rails Installfest program, as well as training some junior developers in some front-end best practices</li>
@@ -104,8 +104,9 @@
     </p>
     <p>As an HTML/CSS specialist and designer, I was skilled at communicating with everyone from designers to CTOs and decision makers regarding the technical and visual challenges encountered in almost every project. Through effective communication I developed strong working relationships with my clients, which helped in managing projects greatly.</p>
     <p>Working on projects from companies as large as Westfield, the ABC, or Price Waterhouse Coopers, as well as for startups and SMEs, has given me a broad depth of experience. For example: I have helped to build the front end of the <%= link_to "ABC’s online store", "https://shop.abc.net.au/" %>, as well as building out the insurance comparison tool and marketing pages for startup <%= link_to "OneBigSwitch", "https://www.onebigswitch.com.au" %>.</p>
-    <p class="subject-title">Freelance Web Design</p>
-    <p>Since leaving reInteractive in 2017, I have been working as a part time freelance web designer and business operator. I have worked on some small graphic design projects in this time, as well as redesigning WordPress websites.</p>
+    <p>reinteractive's owner and CEO Mikel Lindsaar wrote me a <%= link_to "letter of recommendation which you can read here", asset_path("letterofrecommendation.pdf") %> .</p>
+    <p class="subject-title subheading">Freelance Web Design</p>
+    <p>Since leaving reinteractive in 2017, I have been working as a part time freelance web designer and business operator. I have worked on some small graphic design projects in this time, as well as redesigning WordPress websites.</p>
   </div>
 </div>
 
