--- a/app/views/resume/show.html.erb
+++ b/app/views/resume/show.html.erb
@@ -92,9 +92,9 @@
       What I contributed to any given project varied depending on any particular clients needs. During my time at reinteractive I was involved with:
       <ul class='text-list'>
         <li>Branding - I created brands for reinteractive and it’s subsidiary operations</li>
-        <li>Animation - I created instructional videos for stillalive.com and other promotional videos</li>
-        <li>Print design - Brochures, business cards, stationery & more for reinteractive and subsidiaries</li>        
-        <li>Training - I helped teach students how to get started with Rails through the Ruby on Rails Installfest program, as well as training some junior developers in some front-end best practices</li>
+        <li>Animation - I created instructional videos for <%= link_to "StillAlive.com", "https://stillalive.com/" %> and other promotional videos</li>
+        <li>Print design - Brochures, business cards, stationery & more for reinteractive and it's subsidiaries</li>        
+        <li>Training - I helped teach students how to get started with Rails through the <%= link_to "Ruby on Rails Installfest", "http://railsinstallfest.org/" %> program, as well as training some junior developers in some front-end best practices</li>
         <li>Management - running daily stand-ups, client interaction and coordinating small teams</li>
         <li>UX Design - performing user research and employing best practices in creating wireframes</li>
         <li>Web Design - turning well-researched UX into beautiful, interactive website mockups</li>
@@ -102,9 +102,9 @@
         <li>Testing - Maintaining test suites and updating where appropriate</li>
       </ul>
     </p>
-    <p>As an HTML/CSS specialist and designer, I was skilled at communicating with everyone from designers to CTOs and decision makers regarding the technical and visual challenges encountered in almost every project. Through effective communication I developed strong working relationships with my clients, which helped in managing projects greatly.</p>
+    <p>As an HTML/CSS specialist and designer, I was skilled at communicating with everyone from designers to CTOs and decision makers regarding the technical and visual challenges encountered in almost every project. Through effective communication I developed strong working relationships with my clients and coworkers, which helped in managing projects greatly.</p>
     <p>Working on projects from companies as large as Westfield, the ABC, or Price Waterhouse Coopers, as well as for startups and SMEs, has given me a broad depth of experience. For example: I have helped to build the front end of the <%= link_to "ABC’s online store", "https://shop.abc.net.au/" %>, as well as building out the insurance comparison tool and marketing pages for startup <%= link_to "OneBigSwitch", "https://www.onebigswitch.com.au" %>.</p>
-    <p>reinteractive's owner and CEO Mikel Lindsaar wrote me a <%= link_to "letter of recommendation which you can read here", asset_path("letterofrecommendation.pdf") %> .</p>
+    <p>reinteractive's owner and CEO Mikel Lindsaar wrote me a <%= link_to "letter of recommendation which you can read here", asset_path("letterofrecommendation.pdf") %>.</p>
     <p class="subject-title subheading">Freelance Web Design</p>
     <p>Since leaving reinteractive in 2017, I have been working as a part time freelance web designer and business operator. I have worked on some small graphic design projects in this time, as well as redesigning WordPress websites.</p>
   </div>
