fixing link color

--- a/app/assets/stylesheets/resume.sass
+++ b/app/assets/stylesheets/resume.sass
@@ -139,6 +139,7 @@ a
     background-position: 0 -179px
   &:hover
     transform: scale(1.1)
+    color: inherit
 
 
 .wrapper .column-one
@@ -266,20 +267,5 @@ a
   &.subheading
     font-size: 1.1em
 
-.reference-link
-  color: $red
-  line-height: 25px
-  text-decoration: none
-  display: block
-  background: transparent image-url("contact-icons-red.png") no-repeat 0 -1px
-  background-size: 25px auto
-  padding-left: 30px
-  margin: 2px 0
-  +transition(all linear 50ms)
-  transform-origin: left
-  &.email
-    background-position: 0 -50px
-  &:hover, &:active
-    transform: scale(1.05)
 
 
